Update provision-resorces.yml for Azure Pipelines

--- a/provision-resorces.yml
+++ b/provision-resorces.yml
@@ -11,7 +11,7 @@ pool:
   vmImage: ubuntu-latest
 
 stages:
-  - stage: Terraform Validate
+  - stage: Terraform-Validate
     jobs:
      - job: TerraformValidateJob
        continueOnError: false
