--- a/provision-resorces.yml
+++ b/provision-resorces.yml
@@ -36,7 +36,7 @@ stages:
             ensureBackend: true
             backendAzureRmResourceGroupName: 'rg-terraform-backend-group'
             backendAzureRmResourceGroupLocation: 'centralus'
-            backendAzureRmStorageAccountName: 'terraformbackendStorage'
+            backendAzureRmStorageAccountName: 'terraformbackendstorage'
             backendAzureRmContainerName: 'terrafomrbackend'
             backendAzureRmKey: 'terrform-base.tfstate'
             allowTelemetryCollection: false
